[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/menu/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game/Game.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Main.gd" type="Script" id=3]
[ext_resource path="res://assets/gallery/flare-gf4c071d03_1280.jpg" type="Texture" id=4]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.447059, 0.447059, 0.447059, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 7

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]

[node name="Game" parent="." instance=ExtResource( 2 )]
visible = false

[node name="MainMenu" parent="." instance=ExtResource( 1 )]

[connection signal="back" from="Game" to="." method="_on_Game_back"]
[connection signal="to_daily_challenge" from="MainMenu" to="." method="_on_MainMenu_to_daily_challenge"]
[connection signal="to_freeplay" from="MainMenu" to="." method="_on_MainMenu_to_freeplay"]
